--- a/src/components/Footer.scss
+++ b/src/components/Footer.scss
@@ -65,18 +65,23 @@ p {
 }
 .footer-main-box-info .footer-social-link a i.fa-facebook {
   background-color: #3b5998;
+  text-decoration: none !important;
 }
 .footer-main-box-info .footer-social-link a i.fa-twitter {
   background-color: #55acee;
+  text-decoration: none !important;
 }
 .footer-main-box-info .footer-social-link a i.fa-google-plus {
   background-color: #dd4b39;
+  text-decoration: none !important;
 }
 .footer-main-box-info .footer-social-link a i.fa-linkedin {
   background-color: #0976b4;
+  text-decoration: none !important;
 }
 .footer-main-box-info .footer-social-link a i.fa-instagram {
   background-color: #b7242a;
+  text-decoration: none !important;
 }
 .mt-50{
     margin-top: -50px;
